// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H4 should allow size to be overridden 1`] = `
<h4
  className="heading heading--large heading--align-unset heading--ellipsis color-navy900"
  style={Object {}}
>
  An H4 Tag
</h4>
`;

exports[`H4 should render shallow component ok 1`] = `
<h4
  className="heading heading--small heading--align-unset heading--ellipsis color-navy900"
  style={Object {}}
>
  An H4 Tag
</h4>
`;
